feat: provide authorization model endpoint
