# api/server/models/authorization_model_audience.go
@@ -1,0 +1,103 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// AuthorizationModelAudience authorization model audience
+//
+// swagger:model AuthorizationModelAudience
+type AuthorizationModelAudience struct {
+
+	// k8s object
+	K8sObject *K8sObjectRef `json:"k8s_object,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+}
+
+// Validate validates this authorization model audience
+func (m *AuthorizationModelAudience) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateK8sObject(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AuthorizationModelAudience) validateK8sObject(formats strfmt.Registry) error {
+	if swag.IsZero(m.K8sObject) { // not required
+		return nil
+	}
+
+	if m.K8sObject != nil {
+		if err := m.K8sObject.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("k8s_object")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// ContextValidate validate this authorization model audience based on the context it is used
+func (m *AuthorizationModelAudience) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateK8sObject(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AuthorizationModelAudience) contextValidateK8sObject(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.K8sObject != nil {
+		if err := m.K8sObject.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("k8s_object")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AuthorizationModelAudience) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AuthorizationModelAudience) UnmarshalBinary(b []byte) error {
+	var res AuthorizationModelAudience
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
