# api/server/models/authorization_model_operation.go
@@ -1,0 +1,118 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// AuthorizationModelOperation authorization model operation
+//
+// swagger:model AuthorizationModelOperation
+type AuthorizationModelOperation struct {
+
+	// audience
+	Audience []*AuthorizationModelAudience `json:"audience"`
+
+	// method
+	Method string `json:"method,omitempty"`
+
+	// path
+	Path string `json:"path,omitempty"`
+}
+
+// Validate validates this authorization model operation
+func (m *AuthorizationModelOperation) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAudience(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AuthorizationModelOperation) validateAudience(formats strfmt.Registry) error {
+	if swag.IsZero(m.Audience) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Audience); i++ {
+		if swag.IsZero(m.Audience[i]) { // not required
+			continue
+		}
+
+		if m.Audience[i] != nil {
+			if err := m.Audience[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("audience" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// ContextValidate validate this authorization model operation based on the context it is used
+func (m *AuthorizationModelOperation) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateAudience(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AuthorizationModelOperation) contextValidateAudience(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Audience); i++ {
+
+		if m.Audience[i] != nil {
+			if err := m.Audience[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("audience" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AuthorizationModelOperation) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AuthorizationModelOperation) UnmarshalBinary(b []byte) error {
+	var res AuthorizationModelOperation
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
