# api/server/restapi/operations/get_authorization_model_namespace_parameters.go
@@ -1,0 +1,71 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+)
+
+// NewGetAuthorizationModelNamespaceParams creates a new GetAuthorizationModelNamespaceParams object
+//
+// There are no default values defined in the spec.
+func NewGetAuthorizationModelNamespaceParams() GetAuthorizationModelNamespaceParams {
+
+	return GetAuthorizationModelNamespaceParams{}
+}
+
+// GetAuthorizationModelNamespaceParams contains all the bound params for the get authorization model namespace operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters GetAuthorizationModelNamespace
+type GetAuthorizationModelNamespaceParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*
+	  Required: true
+	  In: path
+	*/
+	Namespace string
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewGetAuthorizationModelNamespaceParams() beforehand.
+func (o *GetAuthorizationModelNamespaceParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	rNamespace, rhkNamespace, _ := route.Params.GetOK("namespace")
+	if err := o.bindNamespace(rNamespace, rhkNamespace, route.Formats); err != nil {
+		res = append(res, err)
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindNamespace binds and validates parameter Namespace from path.
+func (o *GetAuthorizationModelNamespaceParams) bindNamespace(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+	o.Namespace = raw
+
+	return nil
+}
